# iwutil

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  iwutil.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build_docs.yml  publish-release.yml  unit_tests.yml
docs/: conf.py  index.rst
docs/source/api/: index.rst
iwutil/: __init__.py  interpolation.py  random.py  save.py
tests/: test_init.py  test_interpolate.py  test_interpolation.py  test_random.py  test_save_read.py
