[project]
name = "iwutil"
description = "Public utility functions for Ionworks code."
authors = ["Ionworks Technolgies Inc"]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
version = "0.1.0"
dependencies = [
    "matplotlib",
    "pandas",
    "numpy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"