[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "iwutil"
description = "Public utility functions for Ionworks code."
authors = [{ name = "Ionworks Technologies Inc", email = "info@ionworks.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pandas[parquet,feather]",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx_rtd_theme",
    "sphinx",
    "myst-parser",
]
polars = [
    "polars",
]

[project.urls]
Homepage = "https://github.com/ionworks/iwutil"
Issues = "https://github.com/ionworks/iwutil/issues"

[tool.hatch]
version.source = "vcs"
version.fallback-version = "0.0.0"
build.hooks.vcs.version-file = "iwutil/_version.py"
